fixed problem with catalog not showing when user is ot logged, added some media queries for header and details page

--- a/garden-of-eden-ng/src/app/catalog/details/details.component.css
+++ b/garden-of-eden-ng/src/app/catalog/details/details.component.css
@@ -117,3 +117,26 @@
     opacity: 0.6;
     cursor: pointer;
 }
+
+@media screen and (max-width: 1601px) {
+    .details-wrapper {
+        padding: 40px 100px;
+        gap: 20px;
+    }
+}
+
+@media screen and (max-width: 1025px) {
+    .details-wrapper {
+        flex-direction: column;
+        height: fit-content;
+    }
+
+    .details-info-holder {
+        width: 70vw;
+        gap: 4vh;
+    }
+
+    .details-info-holder.specs {
+        gap: 2vh;
+    }
+}
